--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <title>Vallender Lab</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="https://github.com/vallenderlab/vallenderlab.github.io/tree/master/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://vallenderlab.github.io/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="https://github.com/vallenderlab/vallenderlab.github.io/tree/master/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://vallenderlab.github.io/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="https://github.com/vallenderlab/vallenderlab.github.io/tree/master/css/agency.min.css" rel="stylesheet">
+    <link href="https://vallenderlab.github.io/css/agency.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -385,21 +385,21 @@ Will now work on MCSR with file names that have white spaces.">Updated for custo
     </footer>
 
     <!-- jQuery -->
-    <script src="https://github.com/vallenderlab/vallenderlab.github.io/tree/master/vendor/jquery/jquery.min.js"></script>
+    <script src="https://vallenderlab.github.io/vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="https://github.com/vallenderlab/vallenderlab.github.io/tree/master/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://vallenderlab.github.io/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"
     integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="https://github.com/vallenderlab/vallenderlab.github.io/tree/master/js/jqBootstrapValidation.js"></script>
-    <script src="https://github.com/vallenderlab/vallenderlab.github.io/tree/master/js/contact_me.js"></script>
+    <script src="https://vallenderlab.github.io/js/jqBootstrapValidation.js"></script>
+    <script src="https://vallenderlab.github.io/js/contact_me.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="https://github.com/vallenderlab/vallenderlab.github.io/tree/master/js/agency.min.js"></script>
+    <script src="https://vallenderlab.github.io/js/agency.min.js"></script>
 
 </body>
 
