--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vallender Lab</title>
+    <title>Vallender Lab Scripts</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="https://vallenderlab.github.io/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
