--- a/index.html
+++ b/index.html
@@ -34,6 +34,62 @@
     <style>
     .fa-stack:hover  .fa.fa-circle-thin { color: black; }
     .fa-stack:hover  .fa.fa-circle { opacity:1.0; color:black;}
+
+    .navbar-custom {
+      background-color: black;
+      border-color: transparent;
+    }
+
+    .navbar-custom .navbar-brand {
+      color: #fed136;
+      font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
+    }
+
+    .navbar-custom .navbar-brand.active,.navbar-custom .navbar-brand:active,.navbar-custom .navbar-brand:focus,.navbar-custom .navbar-brand:hover {
+      color: #fec503;
+    }
+
+    .navbar-custom .nav li a,.navbar-custom .navbar-toggle {
+      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+      color: #fff;
+      text-transform: uppercase;
+    }
+
+    .navbar-custom .navbar-collapse {
+      border-color: rgba(255,255,255,.02);
+    }
+
+    .navbar-custom .navbar-toggle {
+      background-color: #fed136;
+      border-color: #fed136;
+      font-size: 12px;
+    }
+
+    .navbar-custom .navbar-toggle:focus,.navbar-custom .navbar-toggle:hover {
+      background-color: #fed136;
+    }
+
+    .navbar-custom .nav li a {
+      font-weight: 400;
+      letter-spacing: 1px;
+    }
+
+    .navbar-custom .nav li a:focus,.navbar-custom .nav li a:hover {
+      color: #fed136;
+      outline: 0;
+    }
+
+    .navbar-custom .navbar-nav>.active>a {
+      border-radius: 0;
+      color: #fff;
+      background-color: #fed136;
+    }
+
+    .navbar-custom .navbar-nav>.active>a:focus,.navbar-custom .navbar-nav>.active>a:hover {
+      color: #fff;
+      background-color: #fec503;
+    }
+
     </style>
 
 </head>
