--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 
 </head>
 
+</head>
+
 <body id="page-top" class="index">
 
     <!-- Navigation -->
@@ -105,25 +107,104 @@
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">Vallender Lab</a>
+            </div>
+
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#apps">Apps</a>
+                        <a class="page-scroll" href="#proj">Project Description</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#git">Github Projects</a>
-                    </li>
+                        <a class="page-scroll" href="#setup">Setup/Install</a>
+                    </li>                    
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#usage">Usage</a>
                     </li>
                     </ul>
-            </div>
         </div>
         <!-- /.container-fluid -->
     </nav>
     
+    <!-- Project Description Section -->
+    <section id="proj">
+        <div class="container">
+          <!-- Row 1 of Apps -->
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Apps</h2>
+                    <h3 class="section-subheading text-muted">Here are a few apps we've created or are hosting on our server.</h3>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <a href="GPCR-App/" onclick="window.open(this.href); return false;"
+                        onkeypress="window.open(this.href); return false;"><i class="fa fa-mobile-phone fa-stack-1x fa-inverse"></i></a>
+                    </span>
+                    <h4 class="service-heading">GPCR App</h4>
+                    <p class="text-muted">This app is our first major release. It helps to visualize the genetic data produced from orthologous
+                    alignments/phylogenetic analysis of GPCR and related genes.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <a href="HALL-App/" onclick="window.open(this.href); return false;"
+                        onkeypress="window.open(this.href); return false;"><i class="fa fa-mobile-phone fa-stack-1x fa-inverse"></i></a>
+                    </span>
+                    <h4 class="service-heading">Hall App</h4>
+                    <p class="text-muted">The Hall Project App is a meta analysis using the tools from the GPCR Orthologs Project.
+                    One of our collaborators took an interest in the APOL-1 gene, and we used the tools from our GPCR app to fetch data/analysis.
+                    This app is still under development.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <a href="public-ftp/" onclick="window.open(this.href); return false;"
+                        onkeypress="window.open(this.href); return false;"><i class="fa fa-folder-open fa-stack-1x fa-inverse"></i></a>
+                    </span>
+                    <h4 class="service-heading">Public FTP</h4>
+                    <p class="text-muted">Check out this repository which features our datasets and source code in downloadable chunks.</p>
+                </div>
+            </div>
+            <br/>
+            <br/>
+        </div>
+    </section>
+
+
+    <!-- Setup/Install Section -->
+    <section id="setup" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Install/Download</h2>
+                </div>
+            </div>
+            <br/>
+
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p class="large text-muted">Write text here.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Usage Section -->
+    <section id="usage">
+        <div class="container">
+          <!-- Row 1 of Apps -->
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Usage & Examples</h2>
+                    <h3 class="section-subheading text-muted">Insert examples here</h3>
+                </div>
+            </div>
+            </section>
+
  
     
     <footer>
