--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
 </head>
 
+
 <body id="page-top" class="index">
 
     <!-- Navigation -->
@@ -133,44 +134,10 @@
           <!-- Row 1 of Apps -->
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Apps</h2>
-                    <h3 class="section-subheading text-muted">Here are a few apps we've created or are hosting on our server.</h3>
+                    <h2 class="section-heading">Vallender Lab Scripts</h2>
+                    <h3 class="section-subheading text-muted">Describe the repository.</h3>
                 </div>
             </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <a href="GPCR-App/" onclick="window.open(this.href); return false;"
-                        onkeypress="window.open(this.href); return false;"><i class="fa fa-mobile-phone fa-stack-1x fa-inverse"></i></a>
-                    </span>
-                    <h4 class="service-heading">GPCR App</h4>
-                    <p class="text-muted">This app is our first major release. It helps to visualize the genetic data produced from orthologous
-                    alignments/phylogenetic analysis of GPCR and related genes.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <a href="HALL-App/" onclick="window.open(this.href); return false;"
-                        onkeypress="window.open(this.href); return false;"><i class="fa fa-mobile-phone fa-stack-1x fa-inverse"></i></a>
-                    </span>
-                    <h4 class="service-heading">Hall App</h4>
-                    <p class="text-muted">The Hall Project App is a meta analysis using the tools from the GPCR Orthologs Project.
-                    One of our collaborators took an interest in the APOL-1 gene, and we used the tools from our GPCR app to fetch data/analysis.
-                    This app is still under development.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <a href="public-ftp/" onclick="window.open(this.href); return false;"
-                        onkeypress="window.open(this.href); return false;"><i class="fa fa-folder-open fa-stack-1x fa-inverse"></i></a>
-                    </span>
-                    <h4 class="service-heading">Public FTP</h4>
-                    <p class="text-muted">Check out this repository which features our datasets and source code in downloadable chunks.</p>
-                </div>
-            </div>
-            <br/>
-            <br/>
         </div>
     </section>
 
@@ -203,8 +170,8 @@
                     <h3 class="section-subheading text-muted">Insert examples here</h3>
                 </div>
             </div>
-            </section>
-
+          </div>
+       </section>
  
     
     <footer>
