--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vallender Lab Scripts</title>
+    <title>Datasnakes Scripts</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="https://vallenderlab.github.io/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://datasnakes.github.io/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="https://vallenderlab.github.io/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://datasnakes.github.io/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="https://vallenderlab.github.io/css/agency.min.css" rel="stylesheet">
+    <link href="https://datasnakes.github.io/css/agency.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -134,7 +134,7 @@
           <!-- Row 1 of Apps -->
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Vallender Lab Scripts</h2>
+                    <h2 class="section-heading">Datasnakes Scripts</h2>
                     <h3 class="section-subheading text-muted">Describe the repository.</h3>
                 </div>
             </div>
@@ -178,12 +178,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Vallender Lab 2017</span>
+                    <span class="copyright">Copyright &copy; Datasnakes 2017</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="https://vallendergenetics.signup.team/" onclick="window.open(this.href); return false;"
-                        onkeypress="window.open(this.href); return false;"><i class="fa fa-slack"></i></a>
+                        <li><a href="https://github.com/datasnakes" onclick="window.open(this.href); return false;"
+                        onkeypress="window.open(this.href); return false;"><i class="fa fa-github"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -200,21 +200,21 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="https://vallenderlab.github.io/vendor/jquery/jquery.min.js"></script>
+    <script src="https://datasnakes.github.io/vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="https://vallenderlab.github.io/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://datasnakes.github.io/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"
     integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="https://vallenderlab.github.io/js/jqBootstrapValidation.js"></script>
-    <script src="https://vallenderlab.github.io/js/contact_me.js"></script>
+    <script src="https://datasnakes.github.io/js/jqBootstrapValidation.js"></script>
+    <script src="https://datasnakes.github.io/js/contact_me.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="https://vallenderlab.github.io/js/agency.min.js"></script>
+    <script src="https://datasnakes.github.io/js/agency.min.js"></script>
 
 </body>
 
