--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Vallender Lab</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Datasnakes</a>
             </div>
 
                 <ul class="nav navbar-nav navbar-right">
