--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#setup">Setup/Install</a>
-                    </li>                    
+                    </li>
                     <li>
                         <a class="page-scroll" href="#usage">Usage</a>
                     </li>
@@ -127,7 +127,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    
+
     <!-- Project Description Section -->
     <section id="proj">
         <div class="container">
@@ -135,7 +135,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Datasnakes Scripts</h2>
-                    <h3 class="section-subheading text-muted">Describe the repository.</h3>
+                    <h3 class="section-subheading text-muted">The Datasnakes-Orthologs package is a collection of the modules which aids in
+                    the analysis and visualization of orthologs-related bioinformatics projects.</h3>
                 </div>
             </div>
         </div>
@@ -172,8 +173,8 @@
             </div>
           </div>
        </section>
- 
-    
+
+
     <footer>
         <div class="container">
             <div class="row">
