Updated the MANIFEST.in, updated README.rst with development information from @grabear, updated index.html, updated qsub README

--- a/index.html
+++ b/index.html
@@ -94,8 +94,6 @@
 
 </head>
 
-</head>
-
 
 <body id="page-top" class="index">
 
@@ -135,7 +133,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Datasnakes Scripts</h2>
-                    <h3 class="section-subheading text-muted">Describe the repository.</h3>
+                    <h3 class="section-subheading text-muted">The Datasnakes-Orthologs package is a collection of the modules which aids in the analysis and visualization of orthologs-related bioinformatics projects.</h3>
+                    <h3 class="section-subheading text-muted">Check out our <a href="https://github.com/datasnakes/Datasnakes-Scripts/wiki">wiki docs</a> and our <a href="http://datasnakes-scripts.readthedocs.io/en/master/">read the docs</a>!</h3>
                 </div>
             </div>
         </div>
@@ -154,7 +153,13 @@
 
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Write text here.</p>
+                    <p class="large text-muted">Easy Installation</p>
+                    <p class="large text-muted"><code>pip install Datasnakes-Scripts</code></p>
+                    <br/>
+                    <p class="large text-muted">For development mode installation:</p>
+                    <p class="large text-muted">1. <code>git clone http://github.com/datasnakes/Datasnakes-Scripts</code></p>
+                    <p class="large text-muted">2. <code>cd Datasnakes-Scripts</code></p>
+                    <p class="large text-muted">3. <code>pip install -e .</code></p>
                 </div>
             </div>
         </div>
@@ -191,7 +196,7 @@
                     <ul class="list-inline quicklinks">
                         <li><a href="#">Privacy Policy</a>
                         </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li><a href="https://github.com/datasnakes/Datasnakes-Scripts/blob/master/LICENSE">Project License</a>
                         </li>
                     </ul>
                 </div>
