--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Datasnakes Website">
+    <meta name="author" content="Robert Gilmore and Shaurita Hutchins">
+    <link href="https://www.datasnakes.org/favicon-40x40.png" rel="shortcut icon" type="image/png">
 
-    <title>OrthoEvolution</title>
+    <title>Projects | OrthoEvolution</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="https://datasnakes.github.io/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://www.datasnakes.org/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="https://datasnakes.github.io/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://www.datasnakes.org/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="https://datasnakes.github.io/css/agency.min.css" rel="stylesheet">
+    <link href="https://www.datasnakes.org/css/agency.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,21 +33,18 @@
     <![endif]-->
 
     <style>
-    .fa-stack:hover  .fa.fa-circle-thin { color: black; }
-    .fa-stack:hover  .fa.fa-circle { opacity:1.0; color:black;}
+        .sdhcenter {
+            width: 275px;
+            margin: 0 auto;
+            text-align: left;
+        }
 
-    .sdhcenter{
-        width:275px;
-        margin:0 auto;
-        text-align:left;
-    }
-    ul{
-        list-style-type: square;
-    }
+        ul {
+            list-style-type: square;
+        }
     </style>
 
 </head>
-
 
 <body id="page-top" class="index">
 
@@ -58,54 +56,64 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Datasnakes</a>
+                <a class="navbar-brand page-scroll" href="https://www.datasnakes.org/">Datasnakes</a>
             </div>
 
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#proj">Project Description</a>
+                        <a class="page-scroll" href="#description">Description</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#setup">Install</a>
+                        <a class="page-scroll" href="#install">Installation</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#usage">Examples</a>
+                        <a class="page-scroll" href="#examples">Examples</a>
                     </li>
-                    </ul>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
     </nav>
 
-    <!-- Project Description Section -->
-    <section id="proj">
+    <!-- Header -->
+    <header>
         <div class="container">
-          <!-- Row 1 of Apps -->
+            <div class="intro-text">
+                <div class="intro-heading"></div>
+                <a href="#description" class="page-scroll btn btn-xl">OrthoEvolution</a>
+            </div>
+        </div>
+    </header>
+    <!-- Project Description Section -->
+    <section id="description">
+        <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">OrthoEvolution</h2>
-                    <h3 class="section-subheading text-muted">The <a href="https://github.com/datasnakes/OrthoEvolution"> OrthoEvolution</a> python package is an easy to use and comprehensive package which aids in the analysis and visualization of comparative genetics & related bioinformatics projects.
-                        The current implementation of this package places an emphasis on the inference of orthologs using NCBI's blast,
-                        various sequence alignment strategies, and phylogenetics analyses including PAML, PhymL, ete3, and more tools.
-
-The goal of this project is to create a pipeline framework for current (inference of orthologs) and future (RNA-seek) projects.
-                        The Cookies, Manager, Pipeline, and Tools modules act as a framework for our workflow,
-                        while the Orthologs module provides access to specific functions for our various ortholog inference projects.</h3>
-                    <h3 class="section-subheading text-muted">Check out our <a href="https://github.com/datasnakes/OrthoEvolution/wiki">wiki docs</a> and our <a href="http://OrthoEvolution.readthedocs.io/en/master/">read the docs</a>!</h3>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Project Description</h2>
+                    <p class="large text-muted">The <b><a href="https://github.com/datasnakes/OrthoEvolution"> OrthoEvolution</a></b> python package is an easy to use and comprehensive package which aids in the analysis and visualization of comparative genetics & related bioinformatics projects.</p>
+                    <br>
+                    <p class="large text-muted">The current implementation of this package places an emphasis on the inference of orthologs using NCBI's blast, various sequence alignment strategies, and phylogenetics analyses including PAML, PhymL, ete3, and more tools.</p>
+                    <br>
+                    <p class="large text-muted">The goal of this project is to create a pipeline framework for current (inference of orthologs) and future (RNA-seek) projects. The Cookies, Manager, Pipeline, and Tools modules act as a framework for our workflow, while the Orthologs module provides access to specific functions for our various ortholog inference projects.</p>
+                    <br>
+                    <p class="large text-muted">Check out our <a href="https://github.com/datasnakes/OrthoEvolution/wiki">wiki docs</a> and our <a href="http://OrthoEvolution.readthedocs.io/en/master/">read the docs</a>!</p>
                 </div>
             </div>
         </div>
     </section>
 
-
     <!-- Install Section -->
-    <section id="setup" class="bg-light-gray">
+    <section id="install" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Install</h2>
+                    <h2 class="section-heading">Installation</h2>
                 </div>
             </div>
             <br/>
@@ -124,19 +132,18 @@ The goal of this project is to create a pipeline framework for current (inferenc
         </div>
     </section>
 
-    <!-- Usage Section -->
-    <section id="usage">
+    <!-- Examples Section -->
+    <section id="examples">
         <div class="container">
-          <!-- Row 1 of Apps -->
+            <!-- Row 1 of Apps -->
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Examples</h2>
                     <h3 class="section-subheading text-muted">Insert examples here</h3>
                 </div>
             </div>
-          </div>
-       </section>
-
+        </div>
+    </section>
 
     <footer>
         <div class="container">
@@ -146,11 +153,9 @@ The goal of this project is to create a pipeline framework for current (inferenc
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="https://github.com/datasnakes" onclick="window.open(this.href); return false;"
-                        onkeypress="window.open(this.href); return false;"><i class="fa fa-github"></i></a>
+                        <li><a href="https://github.com/datasnakes" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;"><i class="fa fa-github"></i></a>
                         </li>
-                        <li><a href="https://twitter.com/datasnakes" onclick="window.open(this.href); return false;"
-                        onkeypress="window.open(this.href); return false;"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://twitter.com/datasnakes" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;"><i class="fa fa-twitter"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -171,8 +176,7 @@ The goal of this project is to create a pipeline framework for current (inferenc
     <script src="https://datasnakes.github.io/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"
-    integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
     <script src="https://datasnakes.github.io/js/jqBootstrapValidation.js"></script>
